# opentelemetry-inspect

./: .gitignore  AGENTS.md  README.md
.github/workflows/: release.yml
app/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
app/opentelemetry-inspect/src-tauri/: Cargo.toml
app/src/: App.vue  main.ts  store.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  update_protos.sh
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: app_state.rs  grpc_server.rs  lib.rs  log_dto.rs  main.rs  request_processor.rs  subscription_manager.rs  web_server.rs  websocket_hub.rs
app/src-tauri/src/domain/: common.rs  logs.rs  metrics.rs  mod.rs  resource.rs  traces.rs
app/src-tauri/src/opentelemetry/: mod.rs
app/src-tauri/src/opentelemetry/proto/: mod.rs
app/src-tauri/src/opentelemetry/proto/collector/: mod.rs
app/src-tauri/src/opentelemetry/proto/collector/logs/v1/: mod.rs
app/src-tauri/src/opentelemetry/proto/collector/metrics/v1/: mod.rs
app/src-tauri/src/opentelemetry/proto/collector/trace/v1/: mod.rs
app/src-tauri/src/opentelemetry/proto/common/v1/: mod.rs
app/src-tauri/src/opentelemetry/proto/logs/v1/: mod.rs
app/src-tauri/src/opentelemetry/proto/metrics/v1/: mod.rs
app/src-tauri/src/opentelemetry/proto/resource/v1/: mod.rs
app/src-tauri/src/opentelemetry/proto/trace/v1/: mod.rs
app/src/components/: filter-badge.vue  filter-button.vue  filters-component.vue  logs-details-view.vue  resource-details-view.vue  resource-selector.vue  span-details-view.vue  span-duration-bar.vue
app/src/domain/: logs-exensions.ts  logs.ts  metrics.ts  resources.ts  traces.ts
app/src/helpers/: bigint-helpers.ts  collections-helpers.ts  number-helpers.ts
app/src/router/: index.ts
app/src/services/: filter-service.ts  storage-service.ts  websocket-service.ts
app/src/state/: logs-store.ts  metrics-store.ts  resource-store.ts  traces-store.ts
app/src/styles/: details-table.css  list-table.css  page.css  variables.css
app/src/viewmodels/: metrics-view-model.ts  trace-details-models.ts
app/src/views/: Logs.vue  Metrics.vue  Summary.vue  TraceDetails.vue  (+1 more)
scripts/: build-flatpak.sh  release.sh  update_protos.sh
test-project/: OpenTelemetry.TestingProject.slnx
test-project/OpenTelemetry.TestingProject/: OpenTelemetry.TestingProject.csproj  OpenTelemetry.TestingProject.http  Program.cs
test-project/OpenTelemetry.TestingProject.AppHost/: OpenTelemetry.TestingProject.AppHost.csproj
test-project/go/: .gitignore  go.mod  go.sum  main.go
test-project/http/: http-client.env.json  requests.http
test-project/javascript/: index.js  package.json
test-project/python/: main.py  pyproject.toml
test-project/rust/: Cargo.toml
test-project/rust/src/: main.rs
(+21 files in other folders)
