[package]
name = "opentelemetry-inspect"
version = "1.1.0"
description = "OpenTelemetry Inspector: View Logs, Traces and Metrics"
authors = ["indomitable"]
edition = "2021"
license = "GPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default= ["tauri"]
docker= []
tauri= [
    "dep:tauri-build",
    "dep:tauri"
]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "opentelemetry_inspect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }
tonic-prost-build = { version = "0.14.2" }

[dependencies]
tauri = { version = "2", features = [ ], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8.8", features = ["ws", "default"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
rustls = { version = "0.23.35", features = ["ring"] }
uuid = { version = "1.19.0", features = ["v4", "v7"] }
tonic = { version = "0.14.2" }
tonic-prost = { version = "0.14.2" }
prost = "0.14.1"
chrono = { version = "0.4", features = ["serde"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
