[package]
name = "todo-service-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
opentelemetry = { version = "0.31.0", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.31.0", features = [
    "rt-tokio",
    "metrics",
    "logs",
    "experimental_trace_batch_span_processor_with_async_runtime",
    "experimental_metrics_periodicreader_with_async_runtime",
    "experimental_logs_batch_log_processor_with_async_runtime"
]}
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
    "http-proto",
    "hyper-client",
    "trace",
    "metrics",
    "logs"
] }
opentelemetry-semantic-conventions = {  version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry-appender-tracing = {version = "0.31.1"}
tracing = {  version = "0.1.44", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std", "fmt"] }
tracing-opentelemetry = "0.32.0"
